[package]
name = "anybridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
base64 = "0.22.1"
futures = "0.3.30"
tokio-codec = "0.1.0"
rand = "0.8.4"
